# PulseML

./: .env.example  .gitignore  LICENSE  README.md  docker-compose.yml
backend/: Dockerfile  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 20231121_01_initial.py  20250101_01_add_metrics_summary.py  20250101_02_add_device_epoch.py
backend/app/: config.py  dependencies.py  main.py
backend/app/api/: router.py
backend/app/auth/: routes.py  schemas.py  service.py
backend/app/core/: exceptions.py  security.py
backend/app/datasets/: routes.py  schemas.py  service.py  utils.py
backend/app/db/: base.py  models.py  session.py
backend/app/ml_engine/: base_trainer.py  tcn_trainer.py  utils.py  worker.py
backend/app/models_registry/: registry.py  routes.py  schemas.py
backend/app/training/: routes.py  schemas.py  service.py
frontend/: Dockerfile  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/api/: auth.ts  client.ts  datasets.ts  templates.ts  training.ts  types.ts
frontend/src/components/domain/: DatasetTable.tsx  DatasetUploadDialog.tsx  HyperparamForm.tsx  TrainingMetricsChart.tsx  TrainingRunList.tsx
frontend/src/hooks/: useAuth.tsx
frontend/src/pages/: AIAssistantInfoPage.tsx  DashboardPage.tsx  DatasetDetailPage.tsx  DatasetsPage.tsx  NewTrainingRunPage.tsx  TrainingRunDetailPage.tsx  TrainingRunsPage.tsx
frontend/src/router/: index.tsx
frontend/src/styles/: globals.css  theme.ts
(+12 files in other folders)
