[
    project
]
name = "pulseml-backend"
version = "0.1.0"
description = "PulseML backend service powered by FastAPI"
authors = [
    { name = "PulseML Team" }
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.24.0",
    "sqlalchemy>=2.0.20",
    "alembic>=1.12.0,<1.13",
    "psycopg2-binary>=2.9.9",
    "python-multipart>=0.0.6",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt>=4.0.1,<4.1.0",
    "python-jose[cryptography]>=3.3.0",
    "redis>=5.0.1",
    "pydantic>=2.4.2",
    "pydantic-settings>=2.0.3",
    "python-dotenv>=1.0.0",
    "pandas>=2.1.0",
    "numpy>=1.26.0",
    "email-validator>=2.1.0"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "httpx",
    "ruff"
]

[project.scripts]
pulseml-api = "app.main:run"

[tool.uvicorn]
factory = false
host = "0.0.0.0"
port = 8000
reload = true

[build-system]
requires = ["setuptools>=67", "wheel"]
build-backend = "setuptools.build_meta"

